# truthcoin-cpp

./: Dockerfile  INSTALL  Makefile.am  README.md  configure.ac  libtruthcoinconsensus.pc.in
build-aux/m4/: truthcoin_find_bdb48.m4  truthcoin_qt.m4  truthcoin_subdir_to_include.m4
contrib/: README.md  qt_translations.py  tidy_datadir.sh  truthcoin-qt.pro  truthcoind.bash-completion
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  changelog  (+13 more)
depends/: Makefile  README  README.usage  config.site.in
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bootstrap.md  build-osx.md  build-unix.md  developer-notes.md  dnsseed-policy.md  gitian-building.md  init.md  multiwallet-qt.md  notes_blockchain.txt  notes_gitian.txt  notes_truthcoin.txt  release-process.md  tor.md  translation_process.md  travis-ci.txt  unit-tests.md
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_read.cpp  core_write.cpp  crypter.cpp  crypter.h  (+87 more)
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  glibcxx_compat.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/crypto/: common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  rfc6979_hmac_sha256.cpp  rfc6979_hmac_sha256.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/fdlibm/: COPYING  Makefile.am  README.md  configure.ac  libfdlibm.pc.in
src/fdlibm/src/: e_acos.c  e_acosh.c  e_asin.c  e_atan2.c  e_atanh.c  e_cosh.c  e_exp.c  e_fmod.c  e_gamma.c  e_gamma_r.c  e_hypot.c  e_j0.c  e_j1.c  e_jn.c  e_lgamma.c  e_lgamma_r.c  e_log.c  e_log10.c  e_pow.c  e_rem_pio2.c  e_remainder.c  e_scalb.c  e_sinh.c  e_sqrt.c  fdlibm.h  k_cos.c  k_rem_pio2.c  k_sin.c  k_standard.c  k_tan.c  s_asinh.c  s_atan.c  s_cbrt.c  s_ceil.c  s_copysign.c  s_cos.c  s_erf.c  s_expm1.c  s_fabs.c  s_finite.c  (+39 more)
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/linalg/: Makefile.am  README.md  configure.ac  liblinalg.pc.in
src/linalg/src/: tc_mat.c  tc_mat.h
src/primitives/: block.cpp  block.h  market.cpp  market.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  ballotballotfilterproxymodel.cpp  ballotballotfilterproxymodel.h  ballotballottablemodel.cpp  ballotballottablemodel.h  ballotballotwindow.cpp  ballotballotwindow.h  ballotbranchwindow.cpp  ballotbranchwindow.h  ballotoutcomefilterproxymodel.cpp  ballotoutcomefilterproxymodel.h  ballotoutcometablemodel.cpp  ballotoutcometablemodel.h  ballotoutcomewindow.cpp  ballotoutcomewindow.h  ballotsealedvotefilterproxymodel.cpp  ballotsealedvotefilterproxymodel.h  ballotsealedvotetablemodel.cpp  ballotsealedvotetablemodel.h  ballotsealedvotewindow.cpp  ballotsealedvotewindow.h  ballotview.cpp  ballotview.h  ballotvotefilterproxymodel.cpp  ballotvotefilterproxymodel.h  ballotvotetablemodel.cpp  ballotvotetablemodel.h  ballotvotewindow.cpp  ballotvotewindow.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  (+133 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: truthcoin_ach.ts  truthcoin_af_ZA.ts  truthcoin_ar.ts  truthcoin_be_BY.ts  truthcoin_bg.ts  truthcoin_bs.ts  truthcoin_ca.ts  truthcoin_ca@valencia.ts  truthcoin_ca_ES.ts  truthcoin_cmn.ts  truthcoin_cs.ts  truthcoin_cy.ts  truthcoin_da.ts  truthcoin_de.ts  truthcoin_el_GR.ts  truthcoin_en.ts  truthcoin_eo.ts  truthcoin_es.ts  truthcoin_es_CL.ts  truthcoin_es_DO.ts  truthcoin_es_MX.ts  truthcoin_es_UY.ts  truthcoin_et.ts  truthcoin_eu_ES.ts  truthcoin_fa.ts  truthcoin_fa_IR.ts  truthcoin_fi.ts  truthcoin_fr.ts  truthcoin_fr_CA.ts  truthcoin_gl.ts  truthcoin_gu_IN.ts  truthcoin_he.ts  truthcoin_hi_IN.ts  truthcoin_hr.ts  truthcoin_hu.ts  truthcoin_id_ID.ts  truthcoin_it.ts  truthcoin_ja.ts  truthcoin_ka.ts  truthcoin_kk_KZ.ts  (+31 more)
src/qt/res/: truthcoin-qt-res.rc
src/qt/test/: Makefile  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h  truthcoinconsensus.cpp  truthcoinconsensus.h
src/secp256k1/: .gitignore  Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/src/java/: org_truthcoin_NativeSecp256k1.c  org_truthcoin_NativeSecp256k1.h
src/secp256k1/src/java/org/truthcoin/: NativeSecp256k1.java
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum.h  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  skiplist_tests.cpp  test_truthcoin.cpp  timedata_tests.cpp  transaction_tests.cpp  (+4 more)
src/test/data/: README.md  truthcoin-util-test.json
src/univalue/: gen.cpp  univalue.h  univalue_escapes.h
(+116 files in other folders)
